Updates for 2017 Fall

--- a/template.tex
+++ b/template.tex
@@ -78,6 +78,7 @@ $if(graphics)$
 \let\Oldincludegraphics\includegraphics
 \renewcommand{\includegraphics}[1]{\Oldincludegraphics[width=\maxwidth]{#1}}
 $endif$
+\def\tightlist{}
 \ifxetex
 %   \usepackage[setpagesize=false, % page size defined by xetex
 %               xetex]{hyperref}
