Rewrite Complete for Weeks 1-4

--- a/template.tex
+++ b/template.tex
@@ -1,5 +1,8 @@
 \documentclass[$if(fontsize)$$fontsize$,$endif$$if(lang)$$lang$,$endif$$if(papersize)$$papersize$,$endif$]{$documentclass$}
 \usepackage[T1]{fontenc}
+\usepackage{enumitem}
+% Following crushes all spacing between bullet points:
+\setlist[itemize]{noitemsep}
 \usepackage{lmodern}
 % \usepackage{amssymb,amsmath}
 % \usepackage{euler}
